--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,21 @@
 Django==1.4
+amqplib==1.0.2
+anyjson==0.3.1
 argparse==1.2.1
+celery==2.5.3
 certifi==0.0.8
 chardet==1.0.1
+django-celery==2.5.5
+django-kombu==0.9.4
+django-picklefield==0.2.1
+django-storages==1.1.4
+ipython==0.12.1
+kombu==2.1.8
+kunquat==0.5.1
 oauthlib==0.1.2
 psycopg2==2.4.5
 pycrypto==2.5
+python-dateutil==1.5
 requests==0.12.0
+simplejson==2.5.2
 wsgiref==0.1.2
